cambios para llamar al web api en la version 3.1 y conversion de json

--- a/ReservacionesSolution/WebApp/appsettings.json
+++ b/ReservacionesSolution/WebApp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebApiConfigs": {
+    "Host": "Server=.; Database= dbReservaciones; Integrated Security=True;"
+  }
 }
