--- a/ReservacionesSolution/WebApp/appsettings.json
+++ b/ReservacionesSolution/WebApp/appsettings.json
@@ -7,5 +7,8 @@
   "AllowedHosts": "*",
   "WebApiConfigs": {
     "Host": "Server=.; Database= dbReservaciones; Integrated Security=True;"
+  },
+  "EndPoints": {
+    "AUTHENTICATE": "https://localhost:44312/api/Account/Authenticate"
   }
 }
